still not right damnit

--- a/IBISdataupload.html
+++ b/IBISdataupload.html
@@ -7,7 +7,7 @@
     </title>
   </head>
   <body>
-  	<form action="../../cgi-bin/datafileUpload.php3" method="POST" enctype="multipart/form-data">  		<fieldset>  			<input type="file" name="dataF[]" multiple />
+  	<form action="cgi-bin/datafileUpload.php" method="POST" enctype="multipart/form-data">  		<fieldset>  			<input type="file" name="dataF[]" multiple />
   			<input type="submit">
   		</fieldset>
   	</form>
