--- a/IBISnewAnimals.html
+++ b/IBISnewAnimals.html
@@ -93,7 +93,7 @@
 				      <a id="sendeditButton" class="buttonclass " onclick="sendedit()" >Send</a>
          		</div> 
            	<div id="messageDiv"></div>     
-        	<form  name="AnimForm" action="../../cgi-bin/IBISnewAnimals.php3" method="POST" enctype="multipart/form-data" class="">	  			<fieldset id="dataForm" class="hiddentext">				    <input type="text" id = "Kingdom" name="Akingdom" value="Animalia" class="hiddentext"></input>
+        	<form  name="AnimForm" action="cgi-bin/IBISnewAnimals.php" method="POST" enctype="multipart/form-data" class="">	  			<fieldset id="dataForm" class="hiddentext">				    <input type="text" id = "Kingdom" name="Akingdom" value="Animalia" class="hiddentext"></input>
 				    <input type="text" id="Phylum" name="Aphylum" class="hiddentext"></input>
 				    <input type="text" id="subPhylum" name="AsubPhylum" class="hiddentext"></input>
 				    <input type="text" id="Class" name="Aclass" class="hiddentext"></input>
@@ -158,7 +158,7 @@
 			  		</fieldset>
 			 	</form>
 			 	<div id="SrcBlock" class="hiddentext">
-			 	<form name="SourceF" action="../../cgi-bin/IBISsrc.php3" method="POST" enctype="mulipart/form-data">	    			<fieldset>	    				<span><label>Type</label>
+			 	<form name="SourceF" action="cgi-bin/IBISsrc.php" method="POST" enctype="mulipart/form-data">	    			<fieldset>	    				<span><label>Type</label>
 	    				<select name="type" id="type">
 	    					<option>Book</option>
 	    					<option>Web Page</option>
