--- a/IBISLostnFound.html
+++ b/IBISLostnFound.html
@@ -68,7 +68,7 @@
 	    		<div id="messDiv">
 	    			<span class="messSpan"> Clicking one of the buttons presents a list of data entries that can not be displayed in the index because of deficient information. Click on an entry to edit it, you must add a picture to make the entry available in the index </span>
 	    		</div>
-	    		<form name="lnfForm" action="../../cgi-bin/IBISeditStuff.php3" method="POST" enctype="multipart/form-data">					<input type="text" id="catVal" name="thecat" class="hiddentext" value=""/>					<input type="text" id="recID" name="recID" class="hiddentext" value=""/>
+	    		<form name="lnfForm" action="cgi-bin/IBISeditStuff.php" method="POST" enctype="multipart/form-data">					<input type="text" id="catVal" name="thecat" class="hiddentext" value=""/>					<input type="text" id="recID" name="recID" class="hiddentext" value=""/>
 					<input type="text" id="gen" name="genref" class="hiddentext" value=""/>
 					<input type="text" id="spec" name="specref" class="hiddentext" value=""/>
 					
