--- a/IBISregistration.html
+++ b/IBISregistration.html
@@ -7,7 +7,7 @@
       I B I S Registration
     </title>
     <script type="text/javascript" src="jquery-2.1.1.min.js"> </script>
-    <script src="http://192.168.43.132/ibis/js/bootstrap.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script type="text/javascript" src="Gmain.js"> </script>
     <script type="text/javascript" src="dateshorts.js"></script>
     <script type="text/javascript" src="IBIS_register.js"></script>
@@ -21,7 +21,7 @@
 	 <link href="jquery.dm-uploader.min.css" rel="stylesheet">
    <link rel="stylesheet"
 	       type="text/css"
-	       href="./Breg.css"
+	       href="Breg.css"
          />
    <link rel="stylesheet" 
 			   type="text/css" 
@@ -38,7 +38,7 @@
         		<div id="timeBlock">The Time</div>       
       		</div>
       		<div id="logo_image_holder">
-      		  <img id="logo_image" src="./images/Logo1_fullsizetransp.png" />
+      		  <img id="logo_image" src="images/Logo1_fullsizetransp.png" />
       		</div>
       	</div>
       	<div id="Heading" class="row">
@@ -46,14 +46,14 @@
         </div>
       	<div class="row">
 		    	<div id=pgButtons>
-			  		<a id="backButton" href="/ibis/IBISmain.html" class="linkC ">Back to Main </a>
+			  		<a id="backButton" href="IBISmain.html" class="linkC ">Back to Main </a>
 			  		<input type="button" id="buttonBtn" class="linkC " onclick="submitRegistration()" value="Submit">
 			 		</div>
       	</div>
       	<div id="allcontainer" class="container">
       	<div id="agreement"></div>
       	<div id="imgDisplay"></div>
-			<form name="registerForm" role="form" class="form-horizontal" method="POST" action="../../cgi-bin/IBIScontribRegister.php3" enctype="multipart/form-data" >
+			<form name="registerForm" role="form" class="form-horizontal" method="POST" action="cgi-bin/IBIScontribRegister.php3" enctype="multipart/form-data" >
 				<fieldset id="detail_fs" class="form-group">
 					<div id="personalDetails" class="littleDD">
       			<p>
