--- a/IBISsources.html
+++ b/IBISsources.html
@@ -7,7 +7,7 @@
 			IBIS Sources Entry Page
 		</title>
 		<script type="text/javascript" src="jquery-2.1.1.min.js"> </script>
-			<script src="http://192.168.43.132/ibis/js/bootstrap.js"></script>
+			<script src="js/bootstrap.js"></script>
     	<script type="text/javascript" src="dataInputFunctions.js"></script>
     	<script type="text/javascript" src="fileselect.js"></script>
     	<script type="text/javascript" src="dateshorts.js"> </script>
@@ -39,7 +39,7 @@
 			 		$('#dataF').show();
 	 		 	}
 	 	  </script>
-      <link href="http://192.168.43.132/ibis/css/bootstrap.min.css" rel="stylesheet"/>
+      <link href="css/bootstrap.min.css" rel="stylesheet"/>
     	<link rel="stylesheet"
 		    type="text/css"
 		    href="Bsource.css"
@@ -75,7 +75,7 @@
 	    			<div id="refContainer"></div>
 	    			<input type="button" value="Edit it" onclick="updF()" class="button btn-large btn-info"/>
 	    		</div>
-	    		<form id="dataF" name="SourceF" action="../../cgi-bin/IBISsrc.php3" method="POST" enctype="mulipart/form-data" class="hiddentext">
+	    		<form id="dataF" name="SourceF" action="cgi-bin/IBISsrc.php" method="POST" enctype="mulipart/form-data" class="hiddentext">
 	    			<fieldset>
 	    				<div class="inputSet" >
 								<label class="labelC" >Type</label>
