--- a/IBISutilities.html
+++ b/IBISutilities.html
@@ -6,10 +6,11 @@
   <title>
    I B I S - Other Functions
   </title>
-  <script type="text/javascript" src="jquery-2.1.1.min.js"></script>   <script src="http://192.168.43.132/ibis/js/bootstrap.js"></script>
+  <script type="text/javascript" src="jquery-2.1.1.min.js"></script>
+  <script src="js/bootstrap.js"></script>
   <script type="text/javascript" src="Gmain.js"></script>
   <script type="text/javascript" src="dateshorts.js"></script>
-   <link href="http://192.168.43.132/ibis/css/bootstrap.min.css" rel="stylesheet"/>
+   <link href="css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="stylesheet"
   		type="text/css"
         href="Butilities.css"
@@ -50,9 +51,9 @@
 	    					</li>
 								<li id="glList" onclick="showstuff()" class="">Glossary
 									<ul id="listStuff">
-										<li class="Glist"><a href="IBISvegGlossaryEntry.php3?name1=Animals">Animal  </a></li>
-										<li class="Glist"><a href="IBISvegGlossaryEntry.php3?name1=Minerals">Mineral  </a></li>
-										<li class="Glist"><a href="IBISvegGlossaryEntry.php3?name1=Vegetables">Vegetable </a></li>
+										<li class="Glist"><a href="IBISvegGlossaryEntry.php?name1=Animals">Animal  </a></li>
+										<li class="Glist"><a href="IBISvegGlossaryEntry.php?name1=Minerals">Mineral  </a></li>
+										<li class="Glist"><a href="IBISvegGlossaryEntry.php?name1=Vegetables">Vegetable </a></li>
 									</ul>
 								</li>
 								<li>
@@ -82,7 +83,7 @@
       
       function loadPicCompDialog(){
       	theUser = $("#userRef").val();
-	 	 var picCompWin = open('IBISpiccompare.php3', 'picCompWin', 'height=720px, width=440px, top=50px, left=100px');
+	 	 var picCompWin = open('IBISpiccompare.php', 'picCompWin', 'height=720px, width=440px, top=50px, left=100px');
 	  }
 	  function showstuff(){
 	  $('#listStuff').toggle();
