--- a/IBISnewMinerals.html
+++ b/IBISnewMinerals.html
@@ -92,7 +92,7 @@
 							<input type="text" id="Group" name="Mgroup" class="hiddentext">
 							<input type="text" id="Crystal_System" name="crystSys" class="hiddentext">
 							<input type="text" id="Habit" name="Mhabit" class="hiddentext">
-							<input type="text" id="Chemical_Formula" name="Mchemical_Formula" class="hiddentext">
+							<input type="text" id="Formula" name="Mchemical_Formula" class="hiddentext">
 							<input type="text" id="Hardness" name="Mhardness" class="hiddentext">
 							<input type="text" id="Density" name="Mdensity" class="hiddentext">
 							<input type="text" id="Cleavage" name="Mcleavage" class="hiddentext">
