--- a/IBISregistration.html
+++ b/IBISregistration.html
@@ -53,7 +53,7 @@
       	<div id="allcontainer" class="container">
       	<div id="agreement"></div>
       	<div id="imgDisplay"></div>
-			<form name="registerForm" role="form" class="form-horizontal" method="POST" action="cgi-bin/IBIScontribRegister.php3" enctype="multipart/form-data" >
+			<form name="registerForm" role="form" class="form-horizontal" method="POST" action="cgi-bin/IBIScontribRegister.php" enctype="multipart/form-data" >
 				<fieldset id="detail_fs" class="form-group">
 					<div id="personalDetails" class="littleDD">
       			<p>
@@ -88,7 +88,7 @@
 					<div id="drag-and-drop-zone" class="dm-uploader p-5">
             <div class="btn btn-primary btn-block mb-5">
                 <span>Open the file Browser</span>
-                <input name="picture" id="regPic" type="file" title='Click to add Files' />
+                <input name="file" id="regPic" type="file" title='Click to add Files' />
             </div>
           </div>
           
