not much changed - kali import

--- a/IBISnewVegetables.html
+++ b/IBISnewVegetables.html
@@ -125,7 +125,7 @@
 	 			
 	 			</form>
 	 			<form  name="VegDupEditForm" action="../../cgi-bin/IBISeditStuff.php3" method="POST" enctype="multipart/form-data" class="hiddentext">
-						<input type="text" name="thecat" value="vegetables" id="thecatid" class="hiddentext" />
+						<input type="text" name="thecat" value="Vegetables" id="thecatid" class="hiddentext" />
 						<input type="text" name="specref" value="" id="specid" class="hiddentext" />
 				</form>
 	 			<div id="messageDiv">
